# GarClassification

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
doc/: 开机自启动设置.md
include/: Camera.h  Runningtime.h  Tools.h  Yolo.h  dataBase.h  init.h  test.h
include/crc/: struct_typedef.h
include/serial/: SerialData.h  SerialPort.h
src/: CMakeLists.txt  Camera.cpp  Tools.cpp  Yolo.cpp  dataBase.cpp  init.cpp  test.cpp
src/serial/: serialport.cpp  serialtools.cpp
